<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LinkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noLinksParentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/footerParentView"
        android:layout_alignEnd="@+id/footerParentView"
        android:visibility="visible">
        <ImageView
            android:id="@+id/shortlyIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shortly"
            android:layout_marginTop="18dp"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/noLinksIv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@+id/shortlyIv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_no_links"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/noLinksIv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/paste_first_link"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="7dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rvParentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/footerParentView"
        android:layout_alignEnd="@+id/footerParentView"
        android:layout_marginTop="4dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/headerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_link_history"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerParentView"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_alignParentBottom="true"
        android:background="#3B3054">

        <EditText
            android:id="@+id/etShortenLink"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="46dp"
            android:inputType="textUri"
            android:gravity="center"
            android:hint="@string/shorten_link_hint"
            android:background="@drawable/et_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <FrameLayout
            android:id="@+id/flShortenBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:background="#2ACFCF"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/etShortenLink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:enabled="false"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:stateListAnimator="@null"
                android:text="@string/btn_shorten_it"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="4dp"
                android:textAllCaps="true"
                app:rippleColor="@android:color/transparent" />

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/ProgressBarWhite"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>